# OAuth

./: .env.template  .gitignore  .ruff.toml  Dockerfile  alembic.ini  docker-compose.yaml  docker-compose.yml  justfile  pyproject.toml  redis.conf
config/: config.template.toml  prod_config.template.toml
monitoring/grafana/provisioning/datasources/: loki.yml
monitoring/loki/: config.yml
monitoring/prometheus/: prometheus.yml
monitoring/vector/: vector.toml
src/application/authorization/commands/: __init__.py  authorize.py
src/application/common/: __init__.py  exceptions.py
src/application/common/interfaces/: __init__.py  s3_client.py
src/application/s3/commands/: __init__.py  upload.py
src/domain/common/events/: event.py
src/domain/oauth/entities/: authorization_code.py
src/domain/oauth/value_objects/: pkce.py  state.py
src/infrastructure/: config.py  uow.py
src/infrastructure/di/: __init__.py  ioc.py  vars.py
src/infrastructure/log/: main.py  processors.py
src/infrastructure/mediator/: __init__.py  main.py  mediator.py
src/infrastructure/mediator/interface/: __init__.py  entities.py  exceptions.py  ioc.py  mediator.py
src/infrastructure/mediator/ioc/: __init__.py  dishka.py
src/infrastructure/mediator/middlewares/: __init__.py  base.py  logging.py
src/infrastructure/postgres/: exception_mapper.py  main.py  uow.py
src/infrastructure/redis/: config.py  exception_mapper.py  main.py  service.py
src/infrastructure/storage/: config.py  main.py  s3_client.py
src/presentation/api/: __main__.py  main.py
(+19 files in other folders)
