[project]
name = "boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adaptix>=3.0.0b9",
    "aiobotocore>=2.23.0",
    "aiogram>=3.16.0",
    "aiohttp>=3.11.11",
    "aiokafka>=0.12.0",
    "aiosmtplib>=4.0.1",
    "alembic>=1.14.0",
    "anyio>=4.7.0",
    "asyncpg>=0.30.0",
    "dishka>=1.5.3",
    "elastic-apm>=6.23.0",
    "fastapi>=0.115.6",
    "greenlet>=3.1.1",
    "orjson>=3.10.12",
    "pylint>=3.3.6",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.36",
    "streaming-form-data>=1.19.1",
    "structlog>=24.4.0",
    "uuid6>=2024.7.10",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.14",
    "ipython>=8.31.0",
    "pre-commit>=4.0.1",
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "testcontainers>=4.9.0",
]
lint = [
    "mypy>=1.14.0",
    "pylint>=3.3.3",
    "pylint-per-file-ignores>=1.4.0",
    "ruff>=0.8.4",
]
